// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`One rss feed test 1`] = `
"<div class=\\"jumbotron\\">
    <div class=\\"dropdown float-right\\">
        <button
            class=\\"btn btn-secondary btn-sm dropdown-toggle\\"
            type=\\"button\\"
            id=\\"localeDropdownMenuButton\\"
            data-toggle=\\"dropdown\\"
            aria-haspopup=\\"true\\"
            aria-expanded=\\"false\\"
        >
            en
        </button>
        <div
            id=\\"localeDropdownMenu\\"
            class=\\"dropdown-menu\\"
            aria-labelledby=\\"dropdownMenuButton\\"
        >
            <a class=\\"dropdown-item\\" href=\\"#\\">ru</a>
            <a class=\\"dropdown-item\\" href=\\"#\\">en</a>
        </div>
    </div>
    <h1 id=\\"appTitle\\">RSS Aggregator</h1>
    <form id=\\"rssFeedForm\\" class=\\"row\\">
        <div class=\\"col-sm-10\\">
            <div class=\\"form-group\\">
                <input
                    id=\\"inputField\\"
                    class=\\"form-control\\"
                    name=\\"feedUrl\\"
                    placeholder=\\"RSS link\\"
                />
                <div id=\\"validationFeedback\\" class=\\"invalid-feedback\\"></div>
            </div>
        </div>
        <div class=\\"col-sm-2\\">
            <button
                id=\\"submitButton\\"
                class=\\"btn btn-primary\\"
                type=\\"submit\\"
                disabled=\\"\\"
            >
                Add
            </button>
        </div>
    </form>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div id=\\"rssChannels\\" class=\\"col-sm-5\\"></div>
        <div id=\\"rssPosts\\" class=\\"col-sm-7\\"></div>
    </div>
</div>
"
`;

exports[`One rss feed test 2`] = `
"<div class=\\"jumbotron\\">
    <div class=\\"dropdown float-right\\">
        <button
            class=\\"btn btn-secondary btn-sm dropdown-toggle\\"
            type=\\"button\\"
            id=\\"localeDropdownMenuButton\\"
            data-toggle=\\"dropdown\\"
            aria-haspopup=\\"true\\"
            aria-expanded=\\"false\\"
        >
            en
        </button>
        <div
            id=\\"localeDropdownMenu\\"
            class=\\"dropdown-menu\\"
            aria-labelledby=\\"dropdownMenuButton\\"
        >
            <a class=\\"dropdown-item\\" href=\\"#\\">ru</a>
            <a class=\\"dropdown-item\\" href=\\"#\\">en</a>
        </div>
    </div>
    <h1 id=\\"appTitle\\">RSS Aggregator</h1>
    <form id=\\"rssFeedForm\\" class=\\"row\\">
        <div class=\\"col-sm-10\\">
            <div class=\\"form-group\\">
                <input
                    id=\\"inputField\\"
                    class=\\"form-control\\"
                    name=\\"feedUrl\\"
                    placeholder=\\"RSS link\\"
                />
                <div id=\\"validationFeedback\\" class=\\"invalid-feedback\\"></div>
            </div>
        </div>
        <div class=\\"col-sm-2\\">
            <button
                id=\\"submitButton\\"
                class=\\"btn btn-primary\\"
                type=\\"submit\\"
                disabled=\\"\\"
            >
                Add
            </button>
        </div>
    </form>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div id=\\"rssChannels\\" class=\\"col-sm-5\\">
            <div class=\\"card mb-2 bg-light border-0\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">
                        Lorem ipsum feed for an interval of 2 seconds with 5
                        item(s)
                    </h5>
                    <p class=\\"card-text\\">
                        This is a constantly updating lorem ipsum feed.
                    </p>
                </div>
            </div>
        </div>
        <div id=\\"rssPosts\\" class=\\"col-sm-7\\">
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686776\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:16Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686774\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:14Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686772\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:12Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686770\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:10Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686768\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:08Z
                    </a>
                </div>
            </div>
        </div>
    </div>
</div>
"
`;

exports[`One rss feed test 3`] = `
"<div class=\\"jumbotron\\">
    <div class=\\"dropdown float-right\\">
        <button
            class=\\"btn btn-secondary btn-sm dropdown-toggle\\"
            type=\\"button\\"
            id=\\"localeDropdownMenuButton\\"
            data-toggle=\\"dropdown\\"
            aria-haspopup=\\"true\\"
            aria-expanded=\\"false\\"
        >
            en
        </button>
        <div
            id=\\"localeDropdownMenu\\"
            class=\\"dropdown-menu\\"
            aria-labelledby=\\"dropdownMenuButton\\"
        >
            <a class=\\"dropdown-item\\" href=\\"#\\">ru</a>
            <a class=\\"dropdown-item\\" href=\\"#\\">en</a>
        </div>
    </div>
    <h1 id=\\"appTitle\\">RSS Aggregator</h1>
    <form id=\\"rssFeedForm\\" class=\\"row\\">
        <div class=\\"col-sm-10\\">
            <div class=\\"form-group\\">
                <input
                    id=\\"inputField\\"
                    class=\\"form-control\\"
                    name=\\"feedUrl\\"
                    placeholder=\\"RSS link\\"
                />
                <div id=\\"validationFeedback\\" class=\\"invalid-feedback\\"></div>
            </div>
        </div>
        <div class=\\"col-sm-2\\">
            <button
                id=\\"submitButton\\"
                class=\\"btn btn-primary\\"
                type=\\"submit\\"
                disabled=\\"\\"
            >
                Add
            </button>
        </div>
    </form>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div id=\\"rssChannels\\" class=\\"col-sm-5\\">
            <div class=\\"card mb-2 bg-light border-0\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">
                        Lorem ipsum feed for an interval of 2 seconds with 5
                        item(s)
                    </h5>
                    <p class=\\"card-text\\">
                        This is a constantly updating lorem ipsum feed.
                    </p>
                </div>
            </div>
        </div>
        <div id=\\"rssPosts\\" class=\\"col-sm-7\\">
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686780\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:20Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686778\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:18Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686776\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:16Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686774\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:14Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686772\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:12Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686770\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:10Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686768\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:08Z
                    </a>
                </div>
            </div>
        </div>
    </div>
</div>
"
`;

exports[`Two rss feed test 1`] = `
"<div class=\\"jumbotron\\">
    <div class=\\"dropdown float-right\\">
        <button
            class=\\"btn btn-secondary btn-sm dropdown-toggle\\"
            type=\\"button\\"
            id=\\"localeDropdownMenuButton\\"
            data-toggle=\\"dropdown\\"
            aria-haspopup=\\"true\\"
            aria-expanded=\\"false\\"
        >
            en
        </button>
        <div
            id=\\"localeDropdownMenu\\"
            class=\\"dropdown-menu\\"
            aria-labelledby=\\"dropdownMenuButton\\"
        >
            <a class=\\"dropdown-item\\" href=\\"#\\">ru</a>
            <a class=\\"dropdown-item\\" href=\\"#\\">en</a>
        </div>
    </div>
    <h1 id=\\"appTitle\\">RSS Aggregator</h1>
    <form id=\\"rssFeedForm\\" class=\\"row\\">
        <div class=\\"col-sm-10\\">
            <div class=\\"form-group\\">
                <input
                    id=\\"inputField\\"
                    class=\\"form-control\\"
                    name=\\"feedUrl\\"
                    placeholder=\\"RSS link\\"
                />
                <div id=\\"validationFeedback\\" class=\\"invalid-feedback\\"></div>
            </div>
        </div>
        <div class=\\"col-sm-2\\">
            <button
                id=\\"submitButton\\"
                class=\\"btn btn-primary\\"
                type=\\"submit\\"
                disabled=\\"\\"
            >
                Add
            </button>
        </div>
    </form>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div id=\\"rssChannels\\" class=\\"col-sm-5\\"></div>
        <div id=\\"rssPosts\\" class=\\"col-sm-7\\"></div>
    </div>
</div>
"
`;

exports[`Two rss feed test 2`] = `
"<div class=\\"jumbotron\\">
    <div class=\\"dropdown float-right\\">
        <button
            class=\\"btn btn-secondary btn-sm dropdown-toggle\\"
            type=\\"button\\"
            id=\\"localeDropdownMenuButton\\"
            data-toggle=\\"dropdown\\"
            aria-haspopup=\\"true\\"
            aria-expanded=\\"false\\"
        >
            en
        </button>
        <div
            id=\\"localeDropdownMenu\\"
            class=\\"dropdown-menu\\"
            aria-labelledby=\\"dropdownMenuButton\\"
        >
            <a class=\\"dropdown-item\\" href=\\"#\\">ru</a>
            <a class=\\"dropdown-item\\" href=\\"#\\">en</a>
        </div>
    </div>
    <h1 id=\\"appTitle\\">RSS Aggregator</h1>
    <form id=\\"rssFeedForm\\" class=\\"row\\">
        <div class=\\"col-sm-10\\">
            <div class=\\"form-group\\">
                <input
                    id=\\"inputField\\"
                    class=\\"form-control\\"
                    name=\\"feedUrl\\"
                    placeholder=\\"RSS link\\"
                />
                <div id=\\"validationFeedback\\" class=\\"invalid-feedback\\"></div>
            </div>
        </div>
        <div class=\\"col-sm-2\\">
            <button
                id=\\"submitButton\\"
                class=\\"btn btn-primary\\"
                type=\\"submit\\"
                disabled=\\"\\"
            >
                Add
            </button>
        </div>
    </form>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div id=\\"rssChannels\\" class=\\"col-sm-5\\">
            <div class=\\"card mb-2 bg-light border-0\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">
                        Lorem ipsum feed for an interval of 2 seconds with 5
                        item(s)
                    </h5>
                    <p class=\\"card-text\\">
                        This is a constantly updating lorem ipsum feed.
                    </p>
                </div>
            </div>
        </div>
        <div id=\\"rssPosts\\" class=\\"col-sm-7\\">
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686776\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:16Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686774\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:14Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686772\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:12Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686770\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:10Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686768\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:08Z
                    </a>
                </div>
            </div>
        </div>
    </div>
</div>
"
`;

exports[`Two rss feed test 3`] = `
"<div class=\\"jumbotron\\">
    <div class=\\"dropdown float-right\\">
        <button
            class=\\"btn btn-secondary btn-sm dropdown-toggle\\"
            type=\\"button\\"
            id=\\"localeDropdownMenuButton\\"
            data-toggle=\\"dropdown\\"
            aria-haspopup=\\"true\\"
            aria-expanded=\\"false\\"
        >
            en
        </button>
        <div
            id=\\"localeDropdownMenu\\"
            class=\\"dropdown-menu\\"
            aria-labelledby=\\"dropdownMenuButton\\"
        >
            <a class=\\"dropdown-item\\" href=\\"#\\">ru</a>
            <a class=\\"dropdown-item\\" href=\\"#\\">en</a>
        </div>
    </div>
    <h1 id=\\"appTitle\\">RSS Aggregator</h1>
    <form id=\\"rssFeedForm\\" class=\\"row\\">
        <div class=\\"col-sm-10\\">
            <div class=\\"form-group\\">
                <input
                    id=\\"inputField\\"
                    class=\\"form-control\\"
                    name=\\"feedUrl\\"
                    placeholder=\\"RSS link\\"
                />
                <div id=\\"validationFeedback\\" class=\\"invalid-feedback\\"></div>
            </div>
        </div>
        <div class=\\"col-sm-2\\">
            <button
                id=\\"submitButton\\"
                class=\\"btn btn-primary\\"
                type=\\"submit\\"
                disabled=\\"\\"
            >
                Add
            </button>
        </div>
    </form>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div id=\\"rssChannels\\" class=\\"col-sm-5\\">
            <div class=\\"card mb-2 bg-light border-0\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">
                        Lorem ipsum feed for an interval of 2 seconds with 5
                        item(s)
                    </h5>
                    <p class=\\"card-text\\">
                        This is a constantly updating lorem ipsum feed.
                    </p>
                </div>
            </div>
        </div>
        <div id=\\"rssPosts\\" class=\\"col-sm-7\\">
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686780\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:20Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686778\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:18Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686776\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:16Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686774\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:14Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686772\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:12Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686770\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:10Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686768\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:08Z
                    </a>
                </div>
            </div>
        </div>
    </div>
</div>
"
`;

exports[`Two rss feed test 4`] = `
"<div class=\\"jumbotron\\">
    <div class=\\"dropdown float-right\\">
        <button
            class=\\"btn btn-secondary btn-sm dropdown-toggle\\"
            type=\\"button\\"
            id=\\"localeDropdownMenuButton\\"
            data-toggle=\\"dropdown\\"
            aria-haspopup=\\"true\\"
            aria-expanded=\\"false\\"
        >
            en
        </button>
        <div
            id=\\"localeDropdownMenu\\"
            class=\\"dropdown-menu\\"
            aria-labelledby=\\"dropdownMenuButton\\"
        >
            <a class=\\"dropdown-item\\" href=\\"#\\">ru</a>
            <a class=\\"dropdown-item\\" href=\\"#\\">en</a>
        </div>
    </div>
    <h1 id=\\"appTitle\\">RSS Aggregator</h1>
    <form id=\\"rssFeedForm\\" class=\\"row\\">
        <div class=\\"col-sm-10\\">
            <div class=\\"form-group\\">
                <input
                    id=\\"inputField\\"
                    class=\\"form-control\\"
                    name=\\"feedUrl\\"
                    placeholder=\\"RSS link\\"
                />
                <div id=\\"validationFeedback\\" class=\\"invalid-feedback\\"></div>
            </div>
        </div>
        <div class=\\"col-sm-2\\">
            <button
                id=\\"submitButton\\"
                class=\\"btn btn-primary\\"
                type=\\"submit\\"
                disabled=\\"\\"
            >
                Add
            </button>
        </div>
    </form>
</div>
<div class=\\"container-fluid\\">
    <div class=\\"row\\">
        <div id=\\"rssChannels\\" class=\\"col-sm-5\\">
            <div class=\\"card mb-2 bg-light border-0\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">
                        Lorem ipsum feed for an interval of 1 seconds with 5
                        item(s)
                    </h5>
                    <p class=\\"card-text\\">
                        This is a constantly updating lorem ipsum feed.
                    </p>
                </div>
            </div>
            <div class=\\"card mb-2 bg-light border-0\\">
                <div class=\\"card-body\\">
                    <h5 class=\\"card-title\\">
                        Lorem ipsum feed for an interval of 2 seconds with 5
                        item(s)
                    </h5>
                    <p class=\\"card-text\\">
                        This is a constantly updating lorem ipsum feed.
                    </p>
                </div>
            </div>
        </div>
        <div id=\\"rssPosts\\" class=\\"col-sm-7\\">
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686781\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:21Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686779\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:19Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686777\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:17Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686780\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:20Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686778\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:18Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686776\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:16Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686774\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:14Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686772\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:12Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686770\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:10Z
                    </a>
                </div>
            </div>
            <div class=\\"card mb-1 bg-light border-0\\">
                <div class=\\"card-body p-1 pl-3\\">
                    <a
                        class=\\"card-text\\"
                        href=\\"http://example.com/test/1593686768\\"
                        target=\\"_blank\\"
                    >
                        Lorem ipsum 2020-07-02T10:46:08Z
                    </a>
                </div>
            </div>
        </div>
    </div>
</div>
"
`;
